add sql generation
